# trp1-chimera

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
research/: architecture_strategy.md  research_notes.md  tooling_strategty.md
scripts/: spec_check.py
skills/: README.md
skills/content_generator/: README.md  __init__.py  input_schema.json  output_schema.json
skills/engagement_manager/: README.md  __init__.py  input_schema.json  output_schema.json
skills/trend_fetcher/: README.md  __init__.py  input_schema.json  output_schema.json
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/chimera/: __init__.py
tests/: test_skills_interface.py  test_trend_fetcher.py
