[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous Influencer Network - Infrastructure for AI Agent Content Creation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Atnabon Deressa", email = "atnabond@10academy.org" }
]
keywords = ["ai", "agents", "mcp", "influencer", "autonomous"]

dependencies = [
    "pydantic>=2.0",
    "pydantic-ai>=0.1",
    "redis>=5.0",
    "weaviate-client>=4.0",
    "httpx>=0.27",
    "mcp>=0.1",
    "python-dotenv>=1.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.0",
]
commerce = [
    "coinbase-agentkit>=0.1",
    "cdp-sdk>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
